# GameForFree

./: README.md  requirements.txt  uwsgi.ini
backend/: app.py  data.db  pyproject.toml  run.py
backend/models/: games.py
backend/resources/: management.py  queries.py
backend/schemas/: schema.graphql
